<resources>
    <string name="app_name">PersonasMaterialDiplomado20181</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">Agregar persona</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="hombre">hombre</string>
    <string name="mujer">mujer</string>
    <string-array name="sexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
    <string name="mensajeGuardado">Persona guardada</string>
</resources>
